assets/style.css
@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");

html,
body {
  font-family: Arial, sans-serif;
  background-color: #333333;
  color: #cccccc;
  height: 100%;
  font-size: 17px;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.container {
  display: flex;
  width: 60%;
  height: 100vh;
  margin: 0;
  margin-top: 4rem;
}

.info {
  position: fixed;
  width: 25%;
  padding: 20px;
  box-sizing: border-box;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.body_info {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 50%;
  padding: 20px;
  box-sizing: border-box;
  margin-left: 47%;
}

p {
  margin: 0;
  line-height: 1.625;
}

p:nth-of-type(-n + 2) {
  margin-bottom: 17px;
}

h1 {
  font-size: 3.2em;
  color: #ffffff;
  margin-bottom: 0;
  margin-top: 0;
  padding-bottom: 0;
  white-space: nowrap;
}

h3 {
  font-size: 1.2em;
  color: #ffffff;
  margin: 0;
  margin-top: 8px;
  margin-bottom: 15px;
}

h5 {
  font-size: 17px;
}

.logos {
  display: flex;
  position: absolute;
  bottom: 150px;
}

img {
  width: 30px;
  margin: 0;
}

.logo {
  margin: 0 9px;
}

.tableContents {
  list-style-type: none;
  padding: 0;
  margin: 0;
  margin-top: 65px;
}

.tableContents li {
  position: relative;
  padding-left: 45px;
  margin-bottom: 30px;
  font-size: 13px;
}

.tableContents li:before {
  content: "";
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  width: 30px;
  height: 0.5px;
  background-color: lightgray;
}

.tbHeaders {
  display: none;
}

.skillList li {
  margin: 0;
  line-height: 1.625;
}

.skillList {
  margin-top: 5.5rem;
}

/* Media Query for responsive design */
@media screen and (max-width: 1050px) {
  .container {
    flex-direction: column;
    width: 100%;
    height: auto;
    margin-top: 3.5rem;
    /* margin: 0px 45px; */
  }

  h3 {
    margin-bottom: 1px;
  }

  .info {
    position: static;
    width: 100%;
    margin-bottom: 20px;
  }

  .logos {
    position: static;
    margin-top: 15px;
  }

  .body_info {
    width: 100%;
    margin: 0;
  }

  .tableContents {
    display: none;
  }

  .tbHeaders {
    display: block;
    letter-spacing: 0.1rem;
    text-transform: uppercase;
    font-size: 14px;
    margin-bottom: 2rem;
    color: #ffffff;
  }

  .bf {
    max-width: 22rem;
    margin-top: 1.5rem;
    line-height: 1.4;
  }
}

